--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "run-s build:clean build:target",
+    "build:clean": "rimraf target",
+    "build:target": "webpack -p",
+    "dev": "webpack-dev-server --host 0.0.0.0",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,6 +30,10 @@
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.24.1",
     "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.28.0",
+    "inline-environment-variables-webpack-plugin": "^1.2.0",
+    "npm-run-all": "^4.0.2",
+    "rimraf": "^2.6.1",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
