--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "dot-prop-immutable": "^1.3.1",
+    "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-hex": "^0.4.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
