--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "run-s build:clean build:target",
+    "build": "run-s build:clean build:target build:copy",
     "build:clean": "rimraf target",
     "build:target": "webpack -p",
+    "build:copy": "cpy .netlify/* target",
     "dev": "webpack-dev-server --host 0.0.0.0",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -39,6 +40,7 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "cpy-cli": "^1.0.1",
     "dot-prop-immutable": "^1.3.1",
     "lodash": "^4.17.4",
     "react": "^15.6.1",
